# magnetic-tweezers

./: pyproject.toml  requirements.txt
src/: main.py  main.ui  ui_main.py
src/.ipynb_checkpoints/: main-checkpoint.py
src/arduino/: arduino.ino  sketch.yaml
